[kcms/baloo] Don't allow removing the home path

Baloo doesn't actually support not indexing the home path at all, but
the UI allows it, sort of: you can do it, but it doesn't actually have
any effect, and and the removed entry comes back when you leave and
return to the KCM. So let's remove the possibility of doing it at all
by marking the home path in the model as not deletable.

BUG: 425360
FIXED-IN: 5.22